--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,15 @@
 [Ethash]
 wallet = 0xBC5F1a164489C18129503B4cB25227B01b8C898b
 email = adityarizal323@gmail.com
-coin = ETC
+coin = ETH
 rigName = RKETC01
-pool1 = etc-eu1.nanopool.org:9999
-pool2 = etc-eu2.nanopool.org:9999
-pool3 = etc-us-east1.nanopool.org:9999
-pool4 = etc-us-west1.nanopool.org:9999
-pool5 = etc-asia1.nanopool.org:9999
-pool6 = etc-jp1.nanopool.org:9999
-pool7 = etc-au1.nanopool.org:9999
+pool1 = eth-eu1.nanopool.org:9999
+pool2 = eth-eu2.nanopool.org:9999
+pool3 = eth-us-east1.nanopool.org:9999
+pool4 = eth-us-west1.nanopool.org:9999
+pool5 = eth-asia1.nanopool.org:9999
+pool6 = eth-jp1.nanopool.org:9999
+pool7 = eth-au1.nanopool.org:9999
 sortPools = true
 
 [RandomX]
